# nieuwe-rtg-website

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FILMSCRIPT.md  LAUNCH.md  PRODUCTION.md  README.md  SECURITY.md  app.html  backoffice.html  bloomingdale.html  boeken.html  business-pass.html  business-pass.js  docker-compose.yml  download.html  index.html  leverancier.html  lifestyle-pass.html  lifestyle-pass.js  manifest.webmanifest  package-lock.json  package.json  portaal.html  portaal.js  rahul-travel-group.html  realtime.js  rtfoundation.html  rtg-pass.css  rtg-pass.html  rtg-pass.js  start.command  start.sh  sw.js  toegang.html
.claude/: launch.json
.github/: dependabot.yml
api/: chat.js
docs/: architectuur.md  automatische-modernisering.md  butler.md  care.md  de-lijn.md  geheugen-motor.md  hardening.md  naar-9.5.md  rapport-testen-en-kosten.md  schaal-65m.md  turn-server.md
motor/: .gitignore  Cargo.toml  README.md
motor/src/: aead.rs  grootboek.rs  http.rs  json.rs  kluis.rs  ledengids.rs  lib.rs  main.rs  pay.rs  rng.rs
public/: index.html  manifest.webmanifest  robots.txt  sw.js
scripts/: a11y.js  a11ykeuring.js  ast-scan.js  beproeving.js  build.js  bundel.js  chaos-soak.js  check.js  gc-hook.js  geheimen.js  golive.js  icons.js  kassa-spits-pg.js  kassa-spits.js  keuken-orkaan.js  kruisscan.js  mega65-storm.js  mega65.js  motor-gids.js  motor-pariteit.js  motor-schaduw.js  motor-soak.js  motor-storm.js  onnozel.js  orkaan.js  ruis-canary.js  sleutels.js  spitsuur.js
server/: accounts.js  ai.js  anthropic.js  archief.js  betaal.js  beveiliging.js  bus.js  config.js  db.js  eigenaar.js  foundation.js  foutmelder.js  functies.js  gemini.js  kluis.js  log.js  mail.js  media.js  muntbetaal.js  nood.js  openai.js  pg.js  pgaccounts.js  pgwire.js  poort.js  redis.js  rem.js  school.js  seed.js  server.js  smtp.js  stripe.js  stun.js  talen.js  techniek.js  training.js  translate.js  trio.js  vloot.js  web.js  (+2 more)
test/: a11ykeuring.test.js  aanmeldgesprek.test.js  aanmeldingen.test.js  aanwezig.test.js  accounts-os.test.js  accounts.test.js  activiteiten.test.js  agenda.test.js  agent.test.js  ai-regie.test.js  ai-uitwijk.test.js  aidata.test.js  algpin.test.js  allergie.test.js  alpine.test.js  anthropic.test.js  api-contract.test.js  appbieb.test.js  (+277 more)
(+1319 files in other folders)
