# RTG Motor — de hete, security-kritische kern in Rust.
# VOLLEDIG ZERO DEPENDENCIES: alleen de standaardbibliotheek — óók de kluis.
# De AEAD is onze eigen ChaCha20-Poly1305 (RFC 8439), byte-voor-byte geverifieerd
# tegen de officiele RFC-testvectoren (zie src/aead.rs). Geen zelfverzonnen
# algoritme, geen externe crate, geen supply-chain-risico.
[package]
name = "rtg-motor"
version = "0.1.0"
edition = "2021"
description = "RTG Pay money-engine + ledengids + kluis in Rust (zero-dependency)"

[[bin]]
name = "rtg-motor"
path = "src/main.rs"

[lib]
name = "rtg_motor"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
